# codesphere-cli

./: Cargo.toml  default.nix  flake.nix
src/: main.rs
src/api/: client.rs  mod.rs  models.rs
src/api/endpoints/: common.rs  env_vars.rs  mod.rs
src/cli/: mod.rs
src/cli/commands/: env_vars.rs  mod.rs  types.rs
src/error/: common.rs  mod.rs
src/error/endpoints/: env_vars.rs  mod.rs  types.rs
src/utils/: mod.rs
src/utils/readers/: common.rs  env_vars.rs  mod.rs
src/utils/types/: env_vars.rs
