[package]
name = "codesphere-cli"
version = "0.1.0"
edition = "2021"
authors = ["Jan-David Wiederstein jan-david.wiederstein@codesphere.com"]
description = "CLI tool for interacting with Codesphere"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
